<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="app_name">regexptester</string>
	<string name="RegTextLabel">Enter Text for Test Regexp</string>
	<string name="RegexpLabel">Enter Regular Expression</string>
	<string name="description">Simple Regular Expressions Tester</string>
	<string name="CASE_INSENSITIVE">CASE_INSENSITIVE</string>
	<string name="COMMENTS">COMMENTS</string>
	<string name="MULTILINE">MULTILINE</string>
	<string name="UNICODE_CASE">UNICODE_CASE</string>
	<string name="UNIX_LINES">UNIX_LINES</string>
	<string name="ButtText">Calculate</string>
	<string name="GroupsLabel">Set Group</string>
	<string name="DialogTitle"><b>Result:</b></string>
	<string name="Error01">Wrong group number:\n</string>
	<string name="Error02">\nMaximum group number:\n</string>
	<string name="ResultLabel">Result:</string>
	<string name="Error03"><b>Error!</b></string>
	<string name="AboutTitle"><b>About..</b></string>
	<string name="AboutMessage">
		Regular Expressions Tester\n
		<i>2010 © Vitaly Tonkacheyev</i>
	</string>
	<string name="countLabel">Calculate</string>
	<string name="aboutLabel">About..</string>
	<string name="exitLabel">Exit</string>
	<string name="matchName"><u>Match#</u></string>
	<string name="tab1Name">Regular Expression</string>
	<string name="tab2Name">Options</string>
</resources>
