<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TabHost
	    android:id="@+id/mytabhost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical" >

	        <TabWidget
	            android:id="@android:id/tabs"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	        </TabWidget>

	        <FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" >

	            <LinearLayout
	                android:id="@+id/tab1"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">

	                <TextView
	                    android:id="@+id/RegexpText"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/RegTextLabel" />

	                <EditText
	                    android:id="@+id/RegTextEdit"
	                    android:layout_width="fill_parent"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="1" >

	                    <requestFocus />
	                </EditText>

	                <TextView
	                    android:id="@+id/RegexpView"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/RegexpLabel" />

	                <EditText
	                    android:id="@+id/Regexp"
	                    android:layout_width="fill_parent"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="1" />

	                <TableRow
	                    android:id="@+id/tableRow3"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:gravity="center_horizontal" >

	                    <Button
	                        android:id="@+id/RunTest"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center_horizontal"
	                        android:text="@string/ButtText" />

	                </TableRow>

	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/tab2"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical" >

	                <TableLayout
	                    android:id="@+id/TableLayout01"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content" >

	                    <TableRow
	                        android:id="@+id/tableRow1"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="fill_horizontal"
	                        android:gravity="clip_horizontal" >

	                        <CheckBox
	                            android:id="@+id/isCase"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:gravity="center"
	                            android:text="@string/CASE_INSENSITIVE" />
	                    </TableRow>

	                    <TableRow
	                        android:id="@+id/TableRow01"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:gravity="clip_horizontal" >

	                        <CheckBox
	                            android:id="@+id/isMulti"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:gravity="center"
	                            android:text="@string/MULTILINE" />

	                        <CheckBox
	                            android:id="@+id/isComm"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:gravity="center"
	                            android:text="@string/COMMENTS" />
	                    </TableRow>

	                    <TableRow
	                        android:id="@+id/TableRow02"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:gravity="clip_horizontal" >

	                        <CheckBox
	                            android:id="@+id/isUnicode"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:gravity="center"
	                            android:text="@string/UNICODE_CASE" />

	                        <CheckBox
	                            android:id="@+id/isUnix"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:gravity="center"
	                            android:text="@string/UNIX_LINES" />
	                    </TableRow>

	                    <TableRow
	                        android:id="@+id/tableRow2"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:gravity="clip_horizontal" >

	                        <TextView
	                            android:id="@+id/GroupsLabel"
	                            android:layout_width="match_parent"
	                            android:layout_height="match_parent"
	                            android:layout_gravity="center"
	                            android:gravity="center"
	                            android:paddingLeft="10dp"
	                            android:paddingRight="15dp"
	                            android:text="@string/GroupsLabel" />

	                        <Spinner
	                            android:id="@+id/groups"
	                            android:layout_width="match_parent"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="fill_horizontal"
	                            android:minWidth="100dp" />
	                    </TableRow>
	                </TableLayout>

	            </LinearLayout>
	        </FrameLayout>
	    </LinearLayout>
	</TabHost>

</LinearLayout>
